# app/config/packages/nelmio_api_doc.yaml
@@ -1,132 +1,86 @@
 nelmio_api_doc:
-    documentation:
-        info:
-            title: My App
-            description: This is an awesome app!
-            version: 1.0.0
+  documentation:
+    info:
+      title: My App
+      description: This is an awesome app!
+      version: 1.0.0
 
-        security:
-            - Bearer: []
+    components:
+      schemas:
+        rented_info:
+          properties:
+            date:
+              type: string
+              format: date
+            stations:
+              type: array
+              items:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  rented_items:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        name:
+                          type: string
 
-        components:
-            securitySchemes:
-                Bearer:
-                    type: apiKey
-                    description: "Value: Bearer {jwt}"
-                    name: "Authorization"
-                    in: header
+        general_error:
+          title: "General error"
+          description: "General exception"
+          type: object
+          properties:
+            code:
+              type: integer
+              readOnly: true
+            message:
+              type: string
+              readOnly: true
+        validation_error:
+          title: "Validation errors"
+          description: "Validation errors"
+          type: object
+          properties:
+            code:
+              type: integer
+              readOnly: true
+            errors:
+              type: array
+              items:
+                type: string
 
-            schemas:
-                general_error:
-                    title: "General error"
-                    description: "General exception"
-                    type: object
-                    properties:
-                        code:
-                            type: integer
-                            readOnly: true
-                        message:
-                            type: string
-                            readOnly: true
-                validation_error:
-                    title: "Validation errors"
-                    description: "Validation errors"
-                    type: object
-                    properties:
-                        code:
-                            type: integer
-                            readOnly: true
-                        errors:
-                            type: array
-                            items:
-                                type: string
-                token:
-                    title: "Token"
-                    description: "Auth and refresh tokens"
-                    type: object
-                    properties:
-                        token:
-                            type: string
-                            readOnly: true
-                credentials:
-                    title: "Credentials"
-                    description: "Auth pair"
-                    type: object
-                    properties:
-                        username:
-                            type: string
-                            example: "username"
-                        password:
-                            type: string
-                            example: "password"
-                swipe:
-                    title: "Swipe data"
-                    description: "Swipe data object"
-                    type: object
-                    properties:
-                        target:
-                            type: integer
-                            description: "Target user id"
-                        status:
-                            type: integer
-                            enum: [ 0 , 1 ]
-                            default: 0
-                            description: "0 - Dislike, 1 - Like"
+      responses:
+        GeneralError:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/general_error"
+        Unauthorized:
+          description: Unauthorized access
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/general_error"
+        NotFound:
+          description: The specified resource was not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/general_error"
+        ValidationError:
+          description: Request parameters are invalid
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/validation_error"
 
-            responses:
-                GeneralError:
-                    description: Unexpected error
-                    content:
-                        application/json:
-                            schema:
-                                $ref: "#/components/schemas/general_error"
-                Unauthorized:
-                    description: Unauthorized access
-                    content:
-                        application/json:
-                            schema:
-                                $ref: "#/components/schemas/general_error"
-                NotFound:
-                    description: The specified resource was not found
-                    content:
-                        application/json:
-                            schema:
-                                $ref: "#/components/schemas/general_error"
-                ValidationError:
-                    description: Request parameters are invalid
-                    content:
-                        application/json:
-                            schema:
-                                $ref: "#/components/schemas/validation_error"
-
-        paths:
-            /api/login:
-                post:
-                    tags: ["Token"]
-                    operationId: "postCredentialsItem"
-                    summary: "Get JWT token to login"
-                    requestBody:
-                        description: "Create new JWT Token"
-                        content:
-                            application/json:
-                                schema:
-                                    $ref: "#/components/schemas/credentials"
-
-                    responses:
-                        !php/const Symfony\Component\HttpFoundation\Response::HTTP_OK:
-                            description: "Get JWT token"
-                            content:
-                                application/json:
-                                    schema:
-                                        $ref: "#/components/schemas/token"
-
-                        !php/const Symfony\Component\HttpFoundation\Response::HTTP_UNAUTHORIZED:
-                            description: "Invalid credentials"
-                            content:
-                                application/json:
-                                    schema:
-                                        $ref: "#/components/schemas/general_error"
-
-    areas: # to filter documented areas
-        path_patterns:
-            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+  areas: # to filter documented areas
+    path_patterns:
+      - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
